removing z-index from blog menu and adjusting desktop nav grid gap to prevent dropdowns from closing on cursor diagonal movement

--- a/_src/scss/blocks/_header.scss
+++ b/_src/scss/blocks/_header.scss
@@ -71,18 +71,19 @@
   &__nav {
     display: inline-grid;
     grid-template-columns: repeat(5, max-content);
-    grid-column-gap: 1.5rem;
+    grid-column-gap: 0.75rem;
     height: 100%;
 
 
   }
 
   &__nav-item {
-    position: relative;
     display: inline-flex;
     align-items: center;
     height: 100%;
-    cursor: default;
+    padding-right: 0.75rem;
+    position: relative;
+    cursor: pointer;
 
     &:hover {
       .desktop-header__nav-card {
