--- a/_src/scss/blog/_blog-menu.scss
+++ b/_src/scss/blog/_blog-menu.scss
@@ -1,6 +1,5 @@
 .blog-menu {
   @extend %grid;
-  z-index: 20;
   align-items: center;
 }
 
